# apis/checkout/server/model/request/checkout.go
@@ -12,6 +12,13 @@ type InsertTransaction struct {
 	TransactionValue float64   `json:"transaction_value"`
 }
 
+type PutTransaction struct {
+	ID               int64     `json:"id"`
+	Description      string    `json:"description"`
+	TransactionDate  time.Time `json:"transaction_date"`
+	TransactionValue float64   `json:"transaction_value"`
+}
+
 /*****
 struct for posts
 ******/
