# apis/checkout/server/server.go
@@ -66,5 +66,6 @@ func (s Server) setupRouterV1() {
 	authRoutes.GET("/api/checkout/transactions/country/:country", checkout.GetList)
 	authRoutes.GET("/api/checkout/transactions/:transactionID/country/:country", checkout.GetByID)
 	authRoutes.DELETE("/api/checkout/transactions/:transactionID", checkout.DeleteTransaction)
+	authRoutes.PUT("/api/checkout/transactions", checkout.UpdateTransaction)
 
 }
